    have a vampiric bite that also drains speed.
  - Salamander Stormcallers, appearing in Dungeon and Vaults. They can unleash
    a powerful firestorm on you, but must chant for three turns to prepare it.
  - Entropy Weavers, in Spider and Depths. They can greatly corrode you after
    chanting for three turns. They also have many light attacks that can become
    deadly if you have low AC.
* Renamed monsters:
  - Silver statues -> obsidian statues.
  - Green rats -> river rats.
  - Orange rats -> hell rats.
  - Yellow wasps -> wasps.
  - Red wasps -> hornets.
  - Mermaids -> sirens.
  - Sirens -> merfolk avatars.
  - Meatsprint lost souls -> wretched souls.
* The Royal Jelly now leaks a large number of jellies when polymorphed.
* Ghost crabs have been moved from Crypt to Swamp.
* The "misshapen and mutated" status (from Malmutate and the new Irradiate
  spell) is now temporary, but more significant.
* Player ghosts & spellforged servitors can now have more than six spells.
* Player ghosts now have their weapon brands displayed.
* Hellwings can now cast Cigotuvi's Embrace, and start with it active.
* Xtahua's breath now creates a cloud of flames, like red draconians'.
* Tiamat can now be any colour of draconian, except grey.
* Fannar can now cast Condensation Shield.
* Frederick is now a demigod; his armour has been upgraded & his spellset has
  been tweaked.
* Sense invisibility has been simplified; monsters that had it now have see
  invisible + blindness immunity instead.
* Item-eating monsters such as jellies no longer eat items you have seen,
  except for followers of Jiyva.
* Magic immunity no longer confers confusion immunity to monsters.
* Many monsters are no longer magic immune: notably, most plant enemies, eyes,
  mummies, and angels.
* Polymorphed monsters now return to their original shapes in death.
* Liches (and ancient liches) now choose their spells randomly from a large
  set of possible spells, instead of having fixed spellbooks.